@@ -1,5 +1,7 @@
+# -*- coding: utf-8 -*-
 import unittest2 as unittest
-from Products.CMFPlone.utils import getToolByName
+from recensio.policy.indexer import authors
+from recensio.policy.indexer import authorsFulltext
 from recensio.policy.tests.layer import RECENSIO_INTEGRATION_TESTING
 
 
@@ -13,13 +15,38 @@ class TestSearch(unittest.TestCase):
         issue = self.portal["sample-reviews"].newspapera.summer["issue-2"]
         review_id = issue.objectIds()[0]
         self.review = issue[review_id]
+        self.review.setAuthors(
+            [
+                {
+                    "lastname": u"Kotłowski",
+                    "firstname": u"Tadeusz",
+                },
+                {
+                    "lastname": u"North",
+                    "firstname": u"Pete",
+                },
+            ]
+        )
+        self.review.setReviewAuthors(
+            [
+                {
+                    "lastname": u"Testchew",
+                    "firstname": u"Vitali",
+                },
+                {
+                    "lastname": u"Стоичков",
+                    "firstname": u"Христо",
+                },
+            ]
+        )
 
     def test_SearchableText(self):
         text = self.review.SearchableText()
         self.assertIn("Czernowitz", text)
         self.assertIn("TEXT TEXT", text)
         self.assertIn("PDF PDF", text)
-        self.assertIn(self.review.getAuthors()[0]["lastname"].encode("utf-8"), text)
+        self.assertIn(u"Kotłowski".encode("utf-8"), text)
+        self.assertIn(u"Testchew".encode("utf-8"), text)
         self.assertIn(self.review.Creator(), text)
 
         self.assertIn(self.review.Title(), text)
@@ -29,3 +56,19 @@ class TestSearch(unittest.TestCase):
         self.assertIn(self.review.getPublisher(), text)
         self.assertIn(self.review.getSeries(), text)
         self.assertIn("9788360448417", text)
+
+    def test_authors_index(self):
+        self.assertIn(u"Kotłowski, Tadeusz".encode("utf-8"), authors(self.review)())
+        self.assertIn(u"North, Pete".encode("utf-8"), authors(self.review)())
+        self.assertIn(u"Testchew, Vitali".encode("utf-8"), authors(self.review)())
+        self.assertIn(u"Стоичков, Христо".encode("utf-8"), authors(self.review)())
+        self.assertIn(
+            u"Kotłowski, Tadeusz".encode("utf-8"), authorsFulltext(self.review)()
+        )
+        self.assertIn(u"North, Pete".encode("utf-8"), authorsFulltext(self.review)())
+        self.assertIn(
+            u"Testchew, Vitali".encode("utf-8"), authorsFulltext(self.review)()
+        )
+        self.assertIn(
+            u"Стоичков, Христо".encode("utf-8"), authorsFulltext(self.review)()
+        )
